# Pbot

./: .env_sample  .gitignore  .source.swp  README.md  bot.py  cq.py  pyproject.toml  utils.py
Pbot/: cq.py  db.py  pixiv.py  rule.py  utils.py
Pbot/plugins/: GiveMe.py  broadcast.py  call.py  cat.py  dg.py  hhsh.py  mg.py  mybase.py  notice.py  ocr.py  preprocess.py  qieqie_cp.py  repeat.py  schedule.py  wm.py
Pbot/plugins/jrrp/: __init__.py  models.py
Pbot/plugins/music/: __init__.py  models.py
Pbot/plugins/rss/: __init__.py  models.py  parsers.py  utils.py
Pbot/plugins/st/: __init__.py  utils.py
migrations/: env.py
