[tool.poetry]
name = "Pbot"
version = "0.2.0"
description = "Pbot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
alembic = "^1.4.3"
feedparser = "^6.0.2"
bs4 = "^0.0.1"
lxml = "^4.6.2"
langdetect = "^1.0.8"
pixivpy-async = "^1.2.11"
nonebot2 = "2.0.0a7"
nb-cli = "0.3.0"
gino = {version = "^1.0.1", optional = true}
nonebot-plugin-apscheduler = "^0.1.0"
PixivPy = "^3.5.10"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
nonebot-test = "^0.1.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
db = ["gino"]